--- a/react-app/package.json
+++ b/react-app/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.1.8",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0"
@@ -17,5 +18,6 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "typescript": "^4.3.2",
     "vite": "^2.4.4"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
