--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.6.0",
     "express": "~4.16.1",
+    "express-async-handler": "^1.1.4",
     "morgan": "~1.9.1",
     "pg": "^8.7.1",
     "sequelize": "^6.6.5",
